# u1-slicer-for-ios

./: .gitignore  .gitmodules  AGENTS.md  BACKLOG.md  CLAUDE.md  E2E_TESTING.md  GEMINI.md  LICENSE  PLAN.md  README.md  SECURITY.md  build.gradle.kts  gradle.properties  native-so-build.md  settings.gradle  settings.gradle.kts
.agents/: agents.md
.claude/: settings.local.json
.github/workflows/: codeql.yml
.maestro/: README.md  navigation.yaml  slice_3mf_singlecolour.yaml  slice_multicolour.yaml  slice_stl.yaml  smoke.yaml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/androidTest/assets/: tetrahedron.stl
app/src/androidTest/java/com/u1/slicer/: PreparePreviewViewModelTest.kt
app/src/androidTest/java/com/u1/slicer/bambu/: ThreeMfParserColorFilterTest.kt
app/src/androidTest/java/com/u1/slicer/data/: FilamentDaoTest.kt  GcodeSaveTruncationTest.kt  SliceJobDaoTest.kt
app/src/androidTest/java/com/u1/slicer/gcode/: GcodeThumbnailInjectorTest.kt
app/src/androidTest/java/com/u1/slicer/native/: NativeLibraryCorrectnessTest.kt  NativeLibrarySymbolTest.kt
app/src/androidTest/java/com/u1/slicer/slicing/: BambuPipelineIntegrationTest.kt  ProfileEmbedderIntegrationTest.kt  SemmSlicingTest.kt  SlicingIntegrationTest.kt
app/src/androidTest/java/com/u1/slicer/ui/: MakerWorldBrowserUtilsInstrumentedTest.kt
app/src/androidTest/java/com/u1/slicer/viewer/: NativePreparePreviewTest.kt  ThreeMfMeshParserTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/orca_profiles/process/: standard_0.20mm.json
app/src/main/assets/shaders/: grid.frag  grid.vert  model.frag  model.vert  texture.frag  texture.vert  toolpath.frag  toolpath.vert
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: sapil.h
app/src/main/cpp/src/: boost_locale_stub.cpp  nanosvg_impl.c  orca_stubs.cpp  sapil_arrange.cpp  sapil_config.cpp  sapil_diagnostics.cpp  sapil_diagnostics.h  sapil_gcode.cpp  sapil_internal.h  sapil_model.cpp  sapil_print.cpp  sapil_progress.cpp  slicer_wrapper.cpp
app/src/main/java/com/u1/slicer/: AppContainer.kt  DiagnosticsStore.kt  MainActivity.kt  NativeLibrary.kt  SlicerViewModel.kt  SlicingService.kt  U1SlicerApplication.kt  UpgradeDetector.kt
app/src/main/java/com/u1/slicer/bambu/: BambuSanitizer.kt  ProfileEmbedder.kt  ThreeMfInfo.kt  ThreeMfParser.kt
app/src/main/java/com/u1/slicer/data/: AppDatabase.kt  ExtruderPreset.kt  FilamentDao.kt  FilamentProfile.kt  ModelInfo.kt  PlateType.kt  SettingsBackup.kt  SettingsRepository.kt  SliceConfig.kt  SliceJob.kt  SliceJobDao.kt  SliceResult.kt  SlicingOverrides.kt
app/src/main/java/com/u1/slicer/debug/: TestCommandReceiver.kt
app/src/main/java/com/u1/slicer/gcode/: GcodeLayer.kt  GcodeParser.kt  GcodeThumbnailInjector.kt  GcodeToolRemapper.kt  GcodeValidator.kt
app/src/main/java/com/u1/slicer/model/: CopyArrangeCalculator.kt
app/src/main/java/com/u1/slicer/navigation/: NavGraph.kt
app/src/main/java/com/u1/slicer/network/: MakerWorldClient.kt  MakerWorldUtils.kt  MoonrakerClient.kt  PrinterStatus.kt
app/src/main/java/com/u1/slicer/printer/: PrintProgressNotifier.kt  PrinterRepository.kt  PrinterViewModel.kt
app/src/main/java/com/u1/slicer/ui/: FilamentScreen.kt  GcodeViewer3DScreen.kt  GcodeViewerScreen.kt  ImportUrlDialog.kt  JobsScreen.kt  MakerWorldBrowserScreen.kt  MakerWorldLoginScreen.kt  ModelViewerScreen.kt  MultiColorDialog.kt  PlacementViewerScreen.kt  PlateSelectDialog.kt  PrintMonitorScreen.kt  PrinterScreen.kt  SettingsScreen.kt  SlicingOverridesUI.kt
app/src/main/java/com/u1/slicer/viewer/: BaseGLViewerView.kt  BedDrawable.kt  Camera.kt  GcodeRenderer.kt  GcodeViewerView.kt  MeshData.kt  ModelRenderer.kt  ModelViewerView.kt  NativePreviewMesh.kt  ShaderProgram.kt  StlParser.kt  ThreeMfMeshParser.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/u1/slicer/: DiagnosticsStoreTest.kt  FilePickerValidationTest.kt  MergeThreeMfInfoTest.kt  PreparePreviewPlacementTest.kt  UpgradeDetectorTest.kt
app/src/test/java/com/u1/slicer/bambu/: BambuSanitizerTest.kt  ProfileEmbedderTest.kt  ThreeMfParserTest.kt
app/src/test/java/com/u1/slicer/data/: DataClassesTest.kt  PlateTypeTest.kt  SettingsBackupTest.kt  SliceConfigTest.kt  SlicingOverridesTest.kt
app/src/test/java/com/u1/slicer/gcode/: GcodeParserTest.kt  GcodeToolRemapperTest.kt  GcodeValidatorTest.kt
app/src/test/java/com/u1/slicer/model/: CopyArrangeCalculatorTest.kt
docs/: ios-native-build.md  ios-swiftui-app-foundation.md  metal-3d-rendering.md  orca-poc-audit.md
docs/superpowers/plans/: 2026-03-15-b22-b23-multicolor-preview-bugs.md  2026-03-15-f3-multicolor-preview.md  2026-03-15-i2-clipper-diagnostics-and-hardening.md  2026-03-15-preview-ux-batch.md  2026-03-21-cookie-instructions-file-import.md  2026-03-22-webview-makerworld-login.md
docs/superpowers/specs/: 2026-03-15-f3-multicolor-preview-design.md  2026-03-21-cookie-instructions-file-import-design.md  2026-03-22-webview-makerworld-login-design.md
gradle/: libs.versions.toml
ios/: Podfile  README.md  build-shared-framework.sh  setup-ios.sh
ios/U1Slicer/: SceneDelegate.swift
ios/U1Slicer/App/: U1SlicerApp.swift
ios/U1Slicer/Platform/: MetalMeshRenderer.swift  Shaders.metal
ios/U1Slicer/Resources/: Info.plist
ios/U1Slicer/U1Slicer.xcodeproj/: project.pbxproj
ios/U1Slicer/U1Slicer.xcodeproj/project.xcworkspace/xcuserdata/david-mini.xcuserdatad/: UserInterfaceState.xcuserstate
ios/U1Slicer/U1Slicer.xcodeproj/xcshareddata/xcschemes/: U1Slicer.xcscheme
ios/U1Slicer/UI/Components/: Model3DView.swift
ios/U1Slicer/UI/Jobs/: JobsScreen.swift
ios/U1Slicer/UI/Prepare/: PrepareScreen.swift  PrepareViewModel.swift
ios/U1Slicer/UI/Preview/: PreviewScreen.swift
ios/U1Slicer/UI/Printer/: PrinterScreen.swift
ios/U1Slicer/UI/Settings/: SettingsScreen.swift
scripts/: build_boost_locale.sh  build_deps.sh  fetch_header_deps.sh  fetch_prusaslicer.sh
shared/: build.gradle.kts
(+60 files in other folders)
